# api_base

./: Dockerfile  Dockerfile.postgres  Makefile  README.md  alembic.ini  init.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 9acc5ee101b9_migration_message.py  9e8953f4e0a9_migration_message.py  a55976393d66_migration_message.py  b5cacd018e20_migration_message.py  d5e9bc0e03f0_migration_message.py  d70ecabea80c_migration_message.py
app/: main.py  utils.py
app/api/api_v1/endpoints/: items.py  status.py  users.py
app/core/: authentication.py  config.py  middleware.py
app/db/: session.py
app/models/: __init__.py  base.py  users.py
app/schemas/: user.py
postgres_database/: docker-compose.yml
tests/: test_users.py
