[tool.poetry]
name = "evsapi"
version = "0.1.0"
description = "Api to serve evfrontend"
authors = ["siddhuselva <chitharthan.s@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
requests = "^2.31.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.1.2"
flake8 = "^7.0.0"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
